--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
+    "killer": "file:",
     "moment": "^2.29.4",
     "mongodb": "^6.1.0",
     "nodemon": "^3.0.1"
