--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "killer": "file:",
     "moment": "^2.29.4",
     "mongodb": "^6.1.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "socket.io": "^4.8.0"
   }
 }
