remplace nodemon by node

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Petit projet sympa !",
   "main": "package/main.js",
   "scripts": {
-    "start": "nodemon serveur.js"
+    "start": "node serveur.js"
   },
   "repository": {
     "type": "git",
